# defender_report

./: .gitignore  DefenderReport.spec  DefenderReportGenerator.spec  README.md  pyproject.toml
defender_report/: _emails_config.json  categorization.py  cli.py  definitions.py  emailer.py  enrichment.py  grouping.py  main.py  reporting.py  unmatched_utils.py  utils.py
