[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defender-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ldap3>=2.9.1",
  "openpyxl>=3.1.5",
  "pandas>=2.3.0",
  "pandas-stubs>=2.3.0.250703",
  "pyinstaller>=6.14.1",
  "python-dotenv>=1.1.0",
  "requests>=2.32.4",
  "tabulate>=0.9.0",
  "tqdm>=4.67.1",
  "xlsxwriter>=3.2.3",
]

# this tells setuptools to find the `defender_report` package folder
[tool.setuptools.packages.find]
where = ["."]
include = ["defender_report"]

# this creates a `defender-report` console script that calls your main()
[project.scripts]
defender-report = "defender_report.cli:main"
